--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,8 @@
 name: Build miniforge
-on: [push, pull_request]
+on:
+  pull_request:
+  release:
+    types: [published]
 
 jobs:
   build:
@@ -211,3 +214,17 @@ jobs:
         overwrite: true
         file_glob: true
       if: startsWith(github.ref, 'refs/tags/')
+  vt:
+    needs: [build]
+    if: always()
+    runs-on: ubuntu-latest
+    steps:
+    - name: VirusTotal Scan
+      uses: crazy-max/ghaction-virustotal@v3
+      with:
+        vt_api_key: ${{ secrets.VT_API_KEY }}
+        update_release_body: true
+        request_rate: 4
+        files: |
+          .sh$
+          .exe$
